re PR c++/15165 (ICE in instantiate_template)

PR c++/15165
	* g++.dg/template/crash19.C: New test.

	PR c++/15165
	* g++.dg/template/crash19.C: New test.

From-SVN: r82173