gcc/testsuite/g++.dg/template/crash19.C
@@ -1,0 +1,17 @@
+// PR c++/15165
+
+struct S 
+{ 
+    template <class T> S(const T &e);
+};
+int operator *(const double, const S &); 
+template <class T>
+struct X { 
+    enum { SIXTY_FOUR=64 }; 
+    struct node {
+      unsigned char *ptr[sizeof(T)*SIXTY_FOUR];
+        void d() {}
+    };
+    node *head; 
+};
+template struct X<int>;
